# GUI-for-apple-studio-17-ADC

./: README.md  pyproject.toml
src/: adc_crt.py  power_toggle.py
